[gd_scene load_steps=7 format=2]

[ext_resource path="res://Items/Radio.gd" type="Script" id=1]
[ext_resource path="res://Items/Radio_Off.png" type="Texture" id=2]
[ext_resource path="res://SFX/Monsters_Theme.ogg" type="AudioStream" id=3]
[ext_resource path="res://Items/Radio_On.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Off",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "On",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 26, 17 )

[node name="Radio" type="Area2D"]
z_index = -1
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.13, 0.13 )
frames = SubResource( 4 )
animation = "Off"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 18 )
shape = SubResource( 3 )

[node name="Monster_Theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Radio_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Radio_body_exited"]
